# redthread

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: agents-md.md  architecture.md  faq.md  index.md  quickstart.md  robots.txt  store-format.md  usage.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
src/redthread/: __init__.py  cli.py  config_dir.py  hashing.py  hostconfig.py  ids.py  paths.py  resume.py
src/redthread/adapters/: __init__.py  base.py
src/redthread/adapters/examples/: __init__.py  app_build.py  app_test.py  ml_eval.py  ml_train.py
src/redthread/adapters/present/: common.py  (+4 more)
src/redthread/blobs/: __init__.py  base.py  rsync.py
src/redthread/mcp/: __init__.py  server.py  tools.py
src/redthread/models/: __init__.py  artifact.py  entry.py  handoff.py  project.py  run.py
src/redthread/store/: __init__.py  errors.py  gitio.py  layout.py  local.py
src/redthread/sync/: __init__.py  daemon.py
tests/: conftest.py
tests/integration/: test_example_pipelines.py  test_mcp_cross_machine.py  test_present_pipeline.py  test_store_session.py  test_sync_and_resume.py  test_worktree_store.py
tests/unit/: test_adapters.py  test_blobs.py  test_cli.py  test_cli_hostconfig.py  test_cli_memory.py  test_cli_present.py  test_cli_sync.py  test_cli_worktree.py  test_domain_neutral_core.py  test_gitio.py  test_gitio_worktree.py  test_hostconfig.py  test_ids.py  test_mcp_server.py  test_mcp_tools.py  test_models.py  test_paths.py  test_present.py  test_store_memory.py
