[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redthread"
version = "0.4.0"
description = "Portable, cross-phase managed memory for agentic workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sina" }]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "python-ulid>=2.7",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "python-pptx>=1.0.2",
    "mcp>=1.28.1",
]

[project.scripts]
redthread = "redthread.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/redthread"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
